--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bepaid",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Node module for using BePaid API",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,8 @@
   },
   "keywords": [
     "erip",
-    "bepaid"
+    "bepaid",
+    "bepaid api"
   ],
   "author": "noglik",
   "license": "ISC",
